# coding-agent

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mini_coding_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  logging_config.py  models.py  multi_agent.py  observability.py  server.py
mini_coding_agent/skills/: __init__.py  base.py  delegate.py  file_system.py  search.py  shell.py
mini_coding_agent/web/static/: app.js  index.html  style.css
tests/: test_mini_coding_agent.py
